manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bimser-python-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bimser-python
  template:
    metadata:
      labels:
        app: bimser-python
    spec:
      containers:
        - name: python-container
          image: 192.168.1.59:5001/bimser-python-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
